--- a/rook.html
+++ b/rook.html
@@ -135,6 +135,17 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="rook"><a class="header" href="#rook">Rook</a></h1>
+<p>Rook 은 플랫폼, 프레임워크를 제공하고, cloud-native 환경과 통합된 다양한 스토리지를 지원하는 오픈소스 <strong>cloud native 스토리지 오케스트레이터</strong> 입니다.</p>
+<p>Rook 은 배포, 부트스트래핑, 설정, 프로비저닝, 스케일링, 업그레이드, 마이그레이션, 재난 복구, 모니터링, 리소스 관리를 자동화하여 스토리지 소프트웨어를 self-managing, self-scailing, self-healing 스토리지 서비스로 바꿔줍니다. Rook 은 cloud-native 컨테이너 관리, 스케줄링, 오케스트레이션 플랫폼 아래에서 그 역할을 수행합니다.</p>
+<p>Rook 은 (Kubernetes 의) 확장 기능을 사용하여 cloud native 환경에 통합됩니다. 그리고, 스케줄링, 라이프사이클 관리, 리소스 관리, 보안, 모니터링, 그리고 유저 경험에 있어 seamless 한 경험을 제공합니.</p>
+<p>Ceph operator 는 프로덕션 스토리지 플랫폼을 몇년간 제공하며 2018년 12월에 Rook v0.9 가 릴리즈되며 안정화되었습니다.</p>
+<h2 id="quick-start-guide"><a class="header" href="#quick-start-guide">Quick Start Guide</a></h2>
+<p>몇 가지의 <code>kubectl</code> 커맨드를 사용하여 Ceph 을 클러스터에 구성할 수 있습니다. <a href="./quickstart.html">QuickStart</a> 가이드를 참고하여 Ceph operator 를 시작하세요!</p>
+<h2 id="designs"><a class="header" href="#designs">Designs</a></h2>
+<p><a href="https://docs.ceph.com/en/latest/">Ceph</a> 은 블록 스토리지, 오브젝트 스토리지, 공유 파일시스템에 프로덕션 레벨로 수년간 안정화된 확장성있는 분산 스토리지 솔루션입니다. <a href="https://rook.io/docs/rook/v1.8/ceph-storage.html">Ceph overview</a> 를 참고하세요.</p>
+<p>자세한 디자인 문서는, <a href="https://github.com/rook/rook/tree/master/design">design docs</a> 를 참고하세요.</p>
+<h2 id="need-help-be-sure-to-join-the-rook-slack"><a class="header" href="#need-help-be-sure-to-join-the-rook-slack">Need help? Be sure to join the Rook Slack</a></h2>
+<p>질문이 있다면, 주저하지 말고 <a href="https://rook-io.slack.com/">Slack channel</a> 에 문의하세요. </p>
 
                     </main>
 
