deploy: ec3d2b2fdce9424d82778508dda0b9c05f6d8040

--- a/prerequisites/pod_security_policies.html
+++ b/prerequisites/pod_security_policies.html
@@ -135,6 +135,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="pod-security-policies"><a class="header" href="#pod-security-policies">Pod Security Policies</a></h1>
+<blockquote>
+<p>생략</p>
+</blockquote>
 
                     </main>
 
