--- a/prerequisites/prerequisites.html
+++ b/prerequisites/prerequisites.html
@@ -134,7 +134,62 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="prerequisites"><a class="header" href="#prerequisites">Prerequisites</a></h1>
+                        <h1 id="prerequisite"><a class="header" href="#prerequisite">Prerequisite</a></h1>
+<p>Rook 는 최소 버전 조건을 충족하고, 필요한 권한만 부여되어 있다면 어떤 쿠버네티스 클러스터에서도 설치가 가능합니다. (자세한 정보는 아래를 참고하세요.)</p>
+<h2 id="minimum-version"><a class="header" href="#minimum-version">Minimum Version</a></h2>
+<p>Ceph operator 를 위해 Kubernetes v1.16 버전 이상이 필요합니다.</p>
+<h2 id="ceph-prerequistes"><a class="header" href="#ceph-prerequistes">Ceph Prerequistes</a></h2>
+<p>Ceph 스토리지 클러스터를 설정하기 위해, 아래 로컬 스토리지 옵션 중 하나를 충족해야 합니다:</p>
+<ul>
+<li>Raw 디바이스 (파티션이 없고, 포맷되어있지 않아야함)</li>
+<li>Raw 파티션 (포맷되어 있지 않아야 함)</li>
+<li>StorageClass 로 PersistentVolume 이 <code>block</code> 모드로 생성 가능해야 함</li>
+</ul>
+<p>아래 커맨드로 파티션이나 디바이스가 파일시스템으로 포맷되었는지 확인할 수 있습니다.</p>
+<pre><code class="language-sh">lsblk -f
+</code></pre>
+<pre><code class="language-sh">NAME                  FSTYPE      LABEL UUID                                   MOUNTPOINT
+vda
+└─vda1                LVM2_member       &gt;eSO50t-GkUV-YKTH-WsGq-hNJY-eKNf-3i07IB
+ ├─ubuntu--vg-root   ext4              c2366f76-6e21-4f10-a8f3-6776212e2fe4   /
+ └─ubuntu--vg-swap_1 swap              9492a3dc-ad75-47cd-9596-678e8cf17ff9   [SWAP]
+vdb
+</code></pre>
+<p><code>FSTYPE</code> 필드가 비어있지 않다면, 해당 디바이스에 파일시스템이 존재하는 것입니다. 위 예제에서는 <code>vdb</code> 를 사용할 수 있지만, <code>vda</code> 는 사용할 수 없습니다.</p>
+<h2 id="lvm-package"><a class="header" href="#lvm-package">LVM package</a></h2>
+<p>Ceph OSD 는 아래 시나리오에서 LVM 에 디펜던시를 가지고 있습니다.</p>
+<ul>
+<li>OSD 가 raw 디바이스나 파티션에 생성될 때</li>
+<li>암호화 옵션이 켜져 있을 때 (cluster 커스텀 리소스의 <code>encryptedDevice: true</code>)</li>
+<li><code>metadata</code> 디바이스가 지정되어 있을 때</li>
+</ul>
+<p>다음과 같은 상황에서는 LVM 이 필요하지 않습니다.</p>
+<ul>
+<li><code>storageClassDeviceSets</code> 를 사용해 PVC 위에 OSD 를 생성할 떄</li>
+</ul>
+<p>여러분의 시나리오에서 LVM 이 필요하다면, OSD 가 실행될 호스트에서 LVM 이 설치되어 있어야 합니다. 
+몇몇 리눅스 배포판에서는 <code>lvm2</code> 패키지가 설치되어 있지 않습니다. LVM 패키지 없이는, 노드가 재시작 될 때 OSD Pod 이 정상적으로 시작되지 않습니다. 
+리눅스 배포판의 패키지 매니저로 LVM 패키지 설치가 권장됩니다.</p>
+<p>CentOS:</p>
+<pre><code class="language-sh">sudo yum install -y lvm2
+</code></pre>
+<p>Ubuntu:</p>
+<pre><code class="language-sh">sudo apt-get install -y lvm2
+</code></pre>
+<p>RancherOS:</p>
+<ul>
+<li><a href="https://github.com/rancher/os/issues/2551">1.5.0</a> 부터 LVM 이 지원됩니다.</li>
+<li>논리적인 볼륨은 부팅 프로세스에서는 <a href="https://github.com/rook/rook/issues/5027">활성화되지 않습니다.</a>. 가능하게 하기 위해서는 <a href="https://rancher.com/docs/os/v1.x/en/installation/configuration/running-commands/">runcmd command</a> 를 추가해야 합니다.</li>
+</ul>
+<pre><code class="language-yaml">runcmd:
+- [ vgchange, -ay ]
+</code></pre>
+<h2 id="kernel"><a class="header" href="#kernel">Kernel</a></h2>
+<h3 id="rbd"><a class="header" href="#rbd">RBD</a></h3>
+<p>Ceph 은 RBD 모듈이 포함된 리눅스 커널이 필요합니다. 대부분의 리눅스 배포판에는 이 모듈이 포함되어 있지만, 아닌 배포판도 존재합니다. (GKE Container-Optimised OS)</p>
+<p>쿠버네티스 노드에서 <code>modeprobe rbd</code> 커맨드로 확인이 가능합니다. 만약 'not found' 라고 나온다면, 다른 리눅스 배포판으로 커널을 다시 빌드해야 합니다.</p>
+<h3 id="cephfs"><a class="header" href="#cephfs">Cephfs</a></h3>
+<p>Ceph shared filesystem (Cephfs) 볼륨을 만들고자 한다면, 4.17 이상의 커널 버전이 권장됩니다. 커널 버전이 4.17 미만이라면, 요청된 PVC 사이즈 쿼타가 정상적으로 제한되지 않습니다.</p>
 
                     </main>
 
