--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>개인 공부를 위한 목적으로 작성된 문서입니다. 일부 잘못된 번역이 있을 수 있으며, Openshift 와 관련된 문서는 번역되어 있지 않습니다.</p>
+<p>개인 공부를 위한 목적으로 작성된 문서입니다. 잘못된 번역이 있을 수 있으며 Openshift 및 일부 작성자에게 불필요한 문서는 번역되어 있지 않습니다.</p>
 <blockquote>
-<p>PR 은 언제든 환영합니다.</p>
+<p>PR 은 언제든 환영합니다 :)</p>
 </blockquote>
 
                     </main>
