--- a/prerequisites/authenticated_registries.html
+++ b/prerequisites/authenticated_registries.html
@@ -135,6 +135,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="authenticated-registries"><a class="header" href="#authenticated-registries">Authenticated Registries</a></h1>
+<blockquote>
+<p>생략</p>
+</blockquote>
 
                     </main>
 
