deploy: a1377215039b5b0571f22c41b560b58e1cb4caf7

--- a/prerequisites/pod_security_policies.html
+++ b/prerequisites/pod_security_policies.html
@@ -136,7 +136,7 @@
                     <main>
                         <h1 id="pod-security-policies"><a class="header" href="#pod-security-policies">Pod Security Policies</a></h1>
 <blockquote>
-<p>생략</p>
+<p><a href="https://rook.io/docs/rook/v1.8/pod-security-policies.html">생략</a></p>
 </blockquote>
 
                     </main>
