--- a/prerequisites/authenticated_registries.html
+++ b/prerequisites/authenticated_registries.html
@@ -136,7 +136,7 @@
                     <main>
                         <h1 id="authenticated-registries"><a class="header" href="#authenticated-registries">Authenticated Registries</a></h1>
 <blockquote>
-<p>생략</p>
+<p><a href="https://rook.io/docs/rook/v1.8/authenticated-registry.html">생략</a></p>
 </blockquote>
 
                     </main>
