deploy: c22ddb330e01a72cea669829716fbc1011cb808c

--- a/ceph_tools/toolbox.html
+++ b/ceph_tools/toolbox.html
@@ -153,7 +153,7 @@
 <pre><code class="language-sh">kubectl -n rook-ceph rollout status deploy/rook-ceph-tools
 </code></pre>
 <p>rook-ceph-tools 가 <code>Running</code> 상태이면, Pod 에 연결해 커맨드를 실행할 수 있습니다.</p>
-<p>*<em>Example</em></p>
+<p><strong>Example</strong></p>
 <ul>
 <li><code>ceph status</code></li>
 <li><code>ceph osd status</code></li>
