--- a/ceph_tools/openshift_common_issues.html
+++ b/ceph_tools/openshift_common_issues.html
@@ -135,6 +135,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="openshift-common-issues"><a class="header" href="#openshift-common-issues">Openshift Common Issues</a></h1>
+<blockquote>
+<p><a href="https://rook.io/docs/rook/v1.8/ceph-openshift-issues.html">생략</a></p>
+</blockquote>
 
                     </main>
 
